--- a/Resources/css/master.css
+++ b/Resources/css/master.css
@@ -1,25 +1,22 @@
-body{
-
-}
-
-div{
-  border: 1px solid white;
-}
-
 h1{
   font-size: 30px;
 }
 
 .header{
+  position: fixed;
+  width: 100%;
   display: flex;
   color: MediumAquamarine;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 10px 20px;
+  margin-top:-10px;
   border-bottom: 1px solid black;
   align-items: center;
+  z-index: 5;
+  background-color: white;
 }
 
 .logo{
@@ -31,11 +28,14 @@ h1{
   margin: 10px;
 }
 
+.nav{
+  margin-right: 50px;
+}
+
 .nav li{
   display: inline-block;
   list-style: none;
   margin: 0px 5px;
-  border-radius: 4px;
 }
 
 .nav li a{
@@ -49,6 +49,9 @@ h1{
 }
 
 .content{
+  position: relative;
+  flex-wrap: wrap;
+  top: 100px;
   display: flex;
   align-content: flex-start;
   justify-content: center;
@@ -57,7 +60,7 @@ h1{
 .column{
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 10px 10px 100px 10px;
 }
 
 .column.large{
@@ -100,6 +103,51 @@ h1{
   flex-direction: column;
   font-family: Georgia;
   font-size: 17px;
+  color: black;
+}
+
+.small h3{
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.small span{
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-top: : 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 10px 20px;
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+.footer div{
+  margin: 10px auto;
+}
+#MyTimes span{
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  margin: 10px;
+}
+
+#MyTimes a{
+  margin: 10px;
   color: black;
 }
 
